<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/background_game"
    android:fitsSystemWindows="true"
    tools:context=".game.GameActivity">

    <TextView
        android:id="@+id/text_timer_draw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="0:59"
        android:textColor="@color/colorTextSelection"
        android:textSize="24sp"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/whose_turn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:paddingEnd="8dp"
        android:paddingStart="8dp"
        android:text="@string/turn"
        android:textColor="@color/colorTextSelection"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/draw_clear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="16dp"
        android:adjustViewBounds="true"
        android:padding="8dp"
        android:text="@string/clear"
        android:textColor="@color/colorTextSelection"
        android:textSize="17sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <RelativeLayout
        android:id="@+id/timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.233">

        <ProgressBar
            android:id="@+id/circularProgressbar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="280dp"
            android:layout_height="280dp"
            android:layout_centerInParent="true"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:indeterminate="false"
            android:max="60"
            android:progress="0"
            android:progressDrawable="@drawable/circular_progress_bar"
            android:secondaryProgress="100" />

        <TextView
            android:id="@+id/text_timer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="1:00"
            android:textColor="@color/colorTextSelection"
            android:textSize="85sp" />

    </RelativeLayout>


    <LinearLayout
        android:id="@+id/layout_btn_player"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/whose_turn">

        <RelativeLayout
            android:id="@+id/buttonGo144"
            style="@style/ButtonThemeWithColor"
            android:layout_width="200dp"
            android:layout_height="40dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:alpha="0.5"
                android:gravity="center"
                android:text="тест"
                android:textColor="@color/colorTextSelection"
                android:textSize="16sp" />

        </RelativeLayout>

    </LinearLayout>


    <RelativeLayout
        android:id="@+id/layout_for_draw"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/whose_turn">

        <com.natife.assotiation_kotlin.game.UtilForDraw.PaintView
            android:id="@+id/paintView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="50dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal">

            <RelativeLayout
                android:id="@+id/buttonAction"
                style="@style/ButtonThemeWithColor"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_margin="4dp"
                android:layout_weight="1">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:alpha="0.5"
                    android:gravity="center"
                    android:text="@string/action"
                    android:textColor="@color/colorTextSelection"
                    android:textSize="16sp" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/buttonPointBrush"
                style="@style/ButtonThemeWithColor"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_margin="4dp"
                android:layout_weight="1">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:alpha="0.5"
                    android:gravity="center"
                    android:text="@string/brush_settings"
                    android:textColor="@color/colorTextSelection"
                    android:textSize="16sp" />

            </RelativeLayout>

        </LinearLayout>

    </RelativeLayout>


    <LinearLayout
        android:id="@+id/layout_btn_from_tell_and_show"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/timer">

        <RelativeLayout
            android:id="@+id/they_guessed"
            style="@style/ButtonThemeWithColor"
            android:layout_width="200dp"
            android:layout_height="40dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:alpha="0.5"
                android:gravity="center"
                android:text="@string/they_guessed"
                android:textColor="@color/colorTextSelection"
                android:textSize="16sp" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/they_not_guessed"
            style="@style/ButtonThemeWithColor"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_marginTop="12dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:alpha="0.5"
                android:gravity="center"
                android:text="@string/they_not_guessed"
                android:textColor="@color/colorTextSelection"
                android:textSize="16sp" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/remind_word"
            style="@style/ButtonThemeWithColor"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_marginTop="12dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:alpha="0.5"
                android:gravity="center"
                android:text="@string/remind_word"
                android:textColor="@color/colorTextSelection"
                android:textSize="16sp" />

        </RelativeLayout>

    </LinearLayout>


</android.support.constraint.ConstraintLayout>