<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/background_game"
    android:fitsSystemWindows="true"
    tools:context=".choose_how_play.ChooseHowPlayActivity">


    <TextView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="29dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/turn"
        android:textColor="@color/colorTextSelextion"
        android:textSize="21sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/results"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:adjustViewBounds="true"
        android:padding="8dp"
        android:src="@drawable/ic_icon_rezults"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textSelection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:alpha="0.5"
        android:gravity="center"
        android:text="@string/select_word_and_action"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo" />

    <TextView
        android:id="@+id/word1"
        style="@style/RecyclerTheme"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="50dp"
        android:gravity="center_vertical"
        android:paddingEnd="15dp"
        android:paddingStart="15dp"
        android:text="@string/turn"
        android:textColor="@color/colorTextSelextion"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textSelection" />

    <TextView
        android:id="@+id/word2"
        style="@style/RecyclerTheme"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:paddingEnd="15dp"
        android:paddingStart="15dp"
        android:text="@string/turn"
        android:textColor="@color/colorTextSelextion"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/word1" />


    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraintLayout6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="30dp"
        android:fitsSystemWindows="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/word2">

        <RelativeLayout
            android:id="@+id/layout_show"
            style="@style/RecyclerTheme"
            android:layout_width="0dp"
            android:layout_height="150dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/layout_tell"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/mask"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerHorizontal="true"
                android:paddingBottom="30dp"
                android:paddingEnd="10dp"
                android:paddingStart="10dp"
                android:paddingTop="10dp"
                android:src="@drawable/ic_card_show" />

            <TextView
                android:id="@+id/text_show"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/mask"
                android:layout_margin="8dp"
                android:gravity="center"
                android:text="@string/show"
                android:textColor="@color/colorTextSelextion" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/layout_tell"
            style="@style/RecyclerTheme"
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/layout_draw"
            app:layout_constraintStart_toEndOf="@+id/layout_show"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/mask1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:paddingBottom="10dp"
                android:paddingEnd="10dp"
                android:paddingStart="10dp"
                android:paddingTop="10dp"
                android:src="@drawable/ic_card_speak" />

            <TextView
                android:id="@+id/text_tell"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/mask1"
                android:layout_margin="8dp"
                android:gravity="center"
                android:text="@string/tell"
                android:textColor="@color/colorTextSelextion" />


        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/layout_draw"
            style="@style/RecyclerTheme"
            android:layout_width="0dp"
            android:layout_height="150dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/layout_tell"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/mask3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerHorizontal="true"
                android:paddingBottom="30dp"
                android:paddingEnd="10dp"
                android:paddingStart="10dp"
                android:paddingTop="10dp"
                android:src="@drawable/ic_card_draw" />

            <TextView
                android:id="@+id/text_draw"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/mask3"
                android:layout_margin="8dp"
                android:gravity="center"
                android:text="@string/draw"
                android:textColor="@color/colorTextSelextion" />
        </RelativeLayout>

    </android.support.constraint.ConstraintLayout>


    <RelativeLayout
        android:id="@+id/buttonNext"
        style="@style/ButtonThemeWithColor"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout6">

        <TextView
            android:id="@+id/textBtnNext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:alpha="0.5"
            android:gravity="center"
            android:text="@string/go"
            android:textColor="@color/colorTextSelextion"
            android:textSize="16sp" />

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>